--- a/mystyles2.css
+++ b/mystyles2.css
@@ -279,7 +279,7 @@ h1 {
 
 /*mobile*/
 
-@media screen and (min-width: 280px) and (max-width: 768px) {
+/* @media screen and (min-width: 280px) and (max-width: 768px) {
     .title {
         padding-bottom: 2em;
         top: 20vh;
@@ -297,6 +297,9 @@ h1 {
 
     #img, #image {
         top: 1vh;
+        /* position: absolute;
+        top: -20;
+        left: 20;
     }
 
     #experience {
@@ -313,21 +316,23 @@ h1 {
 
     body, #container {
         background-color: #e9c1c1;
-        height: 1000px;
+        height: 100%;
+        overflow-x: hidden;
     }
-}
+} */
 
 /*desktop*/
 
-@media screen and (min-width: 769px) {
+/* @media screen and (min-width: 769px) {
     .title {
         font-size: 4em;
         font-weight: 700;
-        top: 19vh;
+        top: 25vh;
+        padding-bottom: 3em;
     }
 
     #img, #image {
-        top: 4vh;
+        left: 21%;
 }
 
 #icons {
@@ -337,19 +342,26 @@ h1 {
 
 body, #container {
     background-color: #e9c1c1;
-    height: 1000px;
-}
+    height: 2000px;
+    overflow-x: hidden;
 }
 
-/* 
-@media screen and (min-width: 280px) {
+#left-col {
+    padding-left: 5em;
+}
+} */
+
+
+
+
+
+
+/* @media screen and (min-width: 280px) and (max-width: 760px) {
     .title {
-        padding-bottom: 2em;
+        padding-bottom: 3em;
         top: 18vh;
         font-weight: bold;
-        font-size: 2em;
-        padding-left: 5vh;
-        padding-right: 5vh;
+        font-size: 4em;
 
     }
 
@@ -357,8 +369,11 @@ body, #container {
         font-size: 2em;
     }
 
-    #img, #image {
-        top: 1vh;
+    body, #container {
+        background-color: #e9c1c1;
+        height: 1500px
+    }
+
 } */
 
 #headshot {
@@ -367,10 +382,6 @@ body, #container {
     border-radius: 50%;
     
 }
-
-/* #headshotDiv {
-    text-align: center;
-} */
 
 
 #mail {
@@ -436,7 +447,7 @@ body, #container {
 }
 
 #professional-experience, #vol-experience, #education {
-    width: 55%;
+    width: 90%;
 }
 
 #education {
@@ -495,3 +506,338 @@ body, #container {
     width: 43px;
 }
 
+
+/*after installing bootstrap*/
+
+#right-col {
+    top: 4em;
+}
+
+#left-col {
+    padding-left: 5%
+}
+
+@media screen and (min-width: 280px) and (max-width: 304px) {
+    #right-col img {
+        width: 131px;
+        padding: 1em;
+        left: 55px;
+        top: 2em;
+    }
+
+    #right-col {
+        top: 2em;
+    }
+
+    .title {
+        padding-bottom: 0em;
+        font-size: 2em;
+        padding-left: 5%;
+        font-weight: 700;
+        padding-top: 1em;
+        font-weight: 600;
+    }
+
+    #professional-experience, #vol-experience, #education {
+        width: 85%;
+    }
+
+    #professional-experience h2, #vol-experience h2, #education h2 {
+        padding-top: 22%;
+    }
+
+    #vol-experience h2, #education h2 {
+        padding-top: .5em;
+    }
+
+    body, #container {
+        width: 100%;
+        height: 100%;
+        overflow-x: hidden;
+    }
+
+    #professional-experience {
+        padding-top: 3.5em;
+    }
+
+}
+
+
+@media screen and (min-width: 305px) and (max-width: 306px) {
+    .title {
+        font-weight: 600;
+        padding-left: 5%;
+        padding-bottom: 3em;
+    }
+
+    #left-col {
+        padding-left: 9%;
+    }
+
+    #img, #image {
+        position: relative;
+        left: -12%;
+        top: 7vh;
+        height: 400px;
+        border-radius: 50%;
+        width: 99%;
+        height: auto;
+    }
+
+    .menu {
+        left: 256px;
+    }
+}
+
+@media screen and (min-width: 307px) and (max-width: 356px) {
+    .title {
+        font-size: 2em;
+        padding-left: 15%;
+        padding-top: .5em;
+        font-weight: 600;
+    }
+
+    #right-col {
+        padding-top: 6em;
+        left: -26px;
+    }
+
+    body, #container {
+        width: 100%;
+        height: 100%;
+        overflow-x: hidden;
+    }
+
+    #experience {
+        padding-top: 3em;
+    }
+
+    #professional-experience {
+        padding-top: 3.5em;
+    }
+
+    .menu {
+        left: 280px;
+    }
+
+
+}
+
+@media screen and (min-width: 357px) and (max-width: 477px) {
+    body, #container {
+        height: 100%;
+        width: 100%;
+        overflow-x: hidden;
+    }
+
+    .title {
+        padding-left: 11%;
+        padding-bottom: 2em;
+    }
+    
+    #img, #image {
+            position: relative;
+            left: 4%;
+            top: 10vh;
+            height: 400px;
+            border-radius: 50%;
+            width: 73%;
+            height: auto;
+    }
+
+    #experience {
+        padding-top: 2em;
+    }
+
+    .menu {
+        right: 14%;
+    }
+
+}
+
+
+@media screen and (min-width: 478px) and (max-width: 552px) {
+    .title {
+        padding-left: 11%;
+        font-weight: 600;
+    }
+
+    #img {
+        left: 44px;
+    }
+
+    body, #container {
+        height: 100%;
+        width: 100%;
+        overflow-x: hidden;
+    }
+
+    #professional-experience {
+        padding-top: 6em;
+    }
+
+}
+
+@media screen and (min-width: 553px) and (max-width: 620px) {
+    .title {
+        padding-left: 0%;
+        font-size: 3em;
+    }
+
+    #left-col {
+        padding-left: 9%;
+    }
+
+    body, #container {
+        height: 100%;
+        width: 100%;
+        overflow-x: hidden;
+    }
+
+    .title {
+        font-weight: 600;
+    }
+
+    #right-col {
+        padding-right: 11%;
+        
+
+    }
+
+    #img {
+        width: 150px;
+        height: auto;
+    }
+
+    #experience {
+        padding-top: 7em;
+    }
+}
+
+
+@media screen and (min-width: 621px) and (max-width: 767px) {
+    #right-col img {
+        top: 18vh;
+        left: 1em;
+    }
+
+    .title {
+        font-size: 4em; 
+        padding-left: 5%;
+        font-weight: 700;
+        padding-bottom: 3.5em;
+    }
+
+    body, #container {
+        height: 100%;
+        width: 100%;
+        overflow-x: hidden;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1000px) {
+   .title {
+       font-weight: 700;
+       font-size: 3.5em;
+       padding-bottom: 2.5em;
+       padding-left: 8%;
+   }
+
+   #container, body {
+       width: 100%;
+       height: 100%;
+       overflow-x: hidden;
+
+   }
+
+   #right-col {
+       padding-right: 2.5em;
+       padding-top: 3em;
+   }
+
+   #img, #image {
+       left: 28%;
+   }
+}
+
+@media screen and (min-width: 1001px) and (max-width: 1169px) {
+    body, #container {
+        height: 100%;
+        width: 100%;
+        overflow-x: hidden;
+    }
+
+    #img {
+        padding-right: 4em;
+        width: 300px;
+    }
+
+    .title {
+        padding-left: 6%;
+        font-weight: 700;
+        font-size: 4em;
+        padding-bottom: 3em;
+    }
+}
+
+@media screen and (min-width: 1170px) and (max-width: 1300px) {
+    body, #container {
+        height: 100%;
+        width: 100%;
+        overflow-x: hidden;
+    }
+
+    #img {
+        padding-right: 2em;
+        width: 461px;
+    }
+
+    #right-col {
+        padding-right: 1em;
+    }
+
+    .title {
+        padding-left: 5%;
+        font-size: 5em;
+        font-weight: 800;
+        padding-bottom: 3em;
+    }
+
+    #img, #image {
+        left: 24%;
+
+}
+
+@media screen and (min-width: 1301px) and (max-width: 1600px) {
+    body, #container {
+        height: 100%;
+        width: 100%;
+        overflow-x: hidden;
+    }
+
+    .title {
+        font-weight: 800;
+        font-size: 5em;
+        left: 5%;
+        padding-bottom: 5em;
+        top: 2em;
+    }
+
+    #img, #image {
+        left: 25%;
+    }
+
+    #professional-experience {
+        padding-top: 5em;
+    }
+
+    .contact.active {
+        left: 12%;
+    }
+
+    #left-col {
+        left: 5%;
+    }
+
+
+}
