--- a/myStyles.css
+++ b/myStyles.css
@@ -136,11 +136,11 @@ h3 {
 
 @media screen and (min-width: 280px) and (max-width: 400px) {
     .title {
-        margin-right: 30px;
+        margin-right: 30px !important;
     }
 
     #img {
-        margin-left: 60px;
+        margin-left: 60px !important;
     }
 
     /* #col-left {
